# minijinja-mut-fns-repro

./: Cargo.toml
src/: main.rs
