[package]
name = "repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { version = "0.31.0", default-features = false, features = [
    "builtins",
    "macros",
    "multi_template",
    "deserialization",
    "source",
    "speedups",
] }
serde = "1.0.159"
axum = "0.6.12"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.95"
